--- a/AC3/projeto/resources/css/app.css
+++ b/AC3/projeto/resources/css/app.css
@@ -1,3 +1,228 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/*template do app*/
+/*base
+********************************************************************************/
+body {
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(67,89,113,0);
+    background-color: #f3f4f6;
+    color: var(--bs-body-color);
+    font-family: var(--bs-body-font-family);
+    font-size: var(--bs-body-font-size);
+    font-weight: var(--bs-body-font-weight);
+    line-height: var(--bs-body-line-height);
+    margin: 0;
+    text-align: var(--bs-body-text-align);
+}
+
+/*containers
+*******************************************************************************/
+.container, .container-fluid, .container-xxl {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: 100%;
+}
+
+/*card entrar e registrar
+*******************************************************************************/
+.authentication-wrapper {
+    display: flex;
+    flex-basis: 100%;
+    min-height: 100vh;
+    width: 100%;
+}
+
+.authentication-wrapper .authentication-inner {
+    width: 100%;
+}
+
+.authentication-wrapper.authentication-basic {
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+.authentication-wrapper.authentication-basic .authentication-inner {
+    max-width: 400px;
+    position: relative;
+}
+
+.authentication-wrapper.authentication-basic .authentication-inner .card {
+    z-index: 1;
+}
+
+.card {
+    word-wrap: break-word;
+    background-clip: border-box;
+    background-color: #fff;
+    border: 0 solid #d9dee3;
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    position: relative;
+    background-clip: padding-box;
+    box-shadow: 0 2px 6px 0 rgba(67,89,113,.12);
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: 1.5rem;
+}
+
+.authentication-wrapper.authentication-basic .authentication-inner .card .app-brand {
+    margin-bottom: 2.5rem;
+}
+
+.app-brand {
+    line-height: 1;
+    min-height: 1px;
+    overflow: hidden;
+    align-items: center;
+    display: flex;
+}
+
+.justify-content-center {
+    justify-content: center!important;
+}
+
+.gap-2 {
+    gap: 0.5rem!important;
+}
+
+.app-brand-logo {
+    display: block;
+    flex-grow: 0;
+    flex-shrink: 0;
+    min-height: 1px;
+    overflow: hidden;
+}
+
+.app-brand-text.demo {
+    font-size: 1.75rem;
+    letter-spacing: -.5px;
+    text-transform: lowercase;
+}
+
+.app-brand-text {
+    flex-shrink: 0;
+    opacity: 1;
+    transition: opacity .15s ease-in-out;
+}
+
+.text-body {
+    --bs-text-opacity: 1;
+    color: #697a8d!important;
+}
+
+.fw-bolder {
+    font-weight: 900!important;
+}
+
+.mb-2 {
+    margin-bottom: 0.5rem!important;
+}
+
+.h4, h4 {
+    font-size: calc(1.2625rem + .15vw);
+}
+
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    color: #566a7f;
+    font-weight: 500;
+    line-height: 1.1;
+    margin-bottom: 1rem;
+    margin-top: 0;
+}
+
+.mb-4 {
+    margin-bottom: 1.5rem!important;
+}
+
+.mb-3 {
+    margin-bottom: 1rem!important;
+}
+
+.col-form-label, .form-label {
+  color: #566a7f;
+  font-weight: 500;
+  font-size: .75rem;
+  letter-spacing: inherit;
+  text-transform: uppercase;
+}
+
+.form-label {
+  margin-bottom: 0.5rem;
+}
+
+.form-control {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-clip: padding-box;
+    background-color: #fff;
+    border: 1px solid #d9dee3;
+    border-radius: 0.375rem;
+    color: #697a8d;
+    display: block;
+    font-size: .9375rem;
+    font-weight: 400;
+    line-height: 1.53;
+    padding: 0.4375rem 0.875rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    width: 100%;
+}
+
+button, input, optgroup, select, textarea {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    margin: 0;
+}
+
+.btn-primary {
+    background-color: #696cff;
+    border-color: #696cff;
+    box-shadow: 0 0.125rem 0.25rem 0 rgba(105,108,255,.4);
+    color: #fff;
+}
+
+.w-100 {
+    width: 100%!important;
+}
+
+.d-grid {
+    display: grid!important;
+}
+
+.btn {
+    border: 1px solid transparent;
+    border-radius: 0.375rem;
+    font-size: .9375rem;
+    font-weight: 400;
+    line-height: 1.53;
+    padding: 0.4375rem 1.25rem;
+    text-align: center;
+    transition: all .2s ease-in-out;
+    user-select: none;
+    vertical-align: middle;
+}
+
+.text-center {
+    text-align: center!important;
+}
+p {
+    margin-bottom: 1rem;
+    margin-top: 0;
+}
+
+a {
+    color: #696cff;
+    text-decoration: none;
+}
